--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Hok Seng
-logo: /assets/img/profile_photo.png
+logo: /assets/img/profile_photo.jpeg
 #descrption : text below image
 show_downloads: true
 theme: jekyll-theme-Modernist
