--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Hok Seng
 logo: /assets/img/profile_photo.jpeg
 #descrption : text below image
 show_downloads: true
-theme: jekyll-theme-Modernist
+theme: jekyll-theme-minimal
